--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,9 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#008577</color>
-    <color name="colorPrimaryDark">#00574B</color>
+    <color name="colorPrimary">#97C3D2</color>
+    <color name="colorPrimaryDark">#689CAF</color>
     <color name="colorAccent">#D81B60</color>
 
     <color name="colorPrimaryTransparent">#16F3F3F3</color>
+    <color name="colorTransparent">#00FFFFFF</color>
+
+    <color name="colorWhite">#ffffff</color>
+    <color name="colorBlack">#000000</color>
+    <color name="colorPrimaryLight">#4D97C3D2</color>
+    <color name="colorPrimaryVeryLight">#1A97C3D2</color>
 
 </resources>
