--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -5,8 +5,8 @@
     <dimen name="toolbar_logo_height">32dp</dimen>
     <dimen name="button_height">42dp</dimen>
     <dimen name="button_width">180dp</dimen>
-    <dimen name="button_width_large">240dp</dimen>
-    <dimen name="add_scaling_btn_height">22dp</dimen>
+    <dimen name="button_width_small">35dp</dimen>
+    <dimen name="button_width_large">150dp</dimen>
 
     <dimen name="font_size_very_small">12sp</dimen>
     <dimen name="font_size_small">14sp</dimen>
@@ -17,9 +17,12 @@
 
     <dimen name="margin_giant">50dp</dimen>
     <dimen name="margin_very_big">30dp</dimen>
-    <dimen name="margin_big">20dp</dimen>
-    <dimen name="margin_medium">15dp</dimen>
-    <dimen name="margin_small">10dp</dimen>
+    <dimen name="margin_big">18dp</dimen>
+    <dimen name="margin_medium">16dp</dimen>
+    <dimen name="margin_small">8dp</dimen>
     <dimen name="margin_very_small">5dp</dimen>
+    <dimen name="margin_tiny">4dp</dimen>
+
+    <dimen name="radius_10">10dp</dimen>
 
 </resources>
