--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -6,12 +6,25 @@
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
+        <item name="android:windowBackground">@color/colorWhite</item>
     </style>
 
     <style name="AlertDialog" parent="@android:style/Theme.Dialog">
         <item name="android:background">@color/colorPrimary</item>
         <item name="android:textColor">@color/colorPrimaryDark</item>
         <item name="android:colorAccent">@color/colorAccent</item>
+    </style>
+
+    <style name="CustomAlertDialogAnko" parent="ThemeOverlay.MaterialComponents.Dialog.Alert">
+        <item name="android:buttonBarPositiveButtonStyle">@style/btnStyle</item>
+        <item name="android:buttonBarNegativeButtonStyle">@style/btnStyle</item>
+        <item name="android:textColor">@color/colorPrimaryDark</item>
+        <item name="android:textColorPrimary">@color/colorPrimaryDark</item>
+        <item name="android:textColorSecondary">@color/colorPrimaryDark</item>
+    </style>
+
+    <style name="btnStyle" parent="Widget.AppCompat.ActionButton">
+        <item name="android:textColor">@color/colorPrimaryDark</item>
     </style>
 
 </resources>
